Fixed useless scrollbars that appear when you expand a news in compact view

--- a/css/content.css
+++ b/css/content.css
@@ -231,7 +231,7 @@
     }
 
     #app-content .open .utils .title h1 a {
-        overflow: scroll;
+        overflow: auto;
         white-space: normal;
     }
 
